--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section class="sec2">
             <h2>Bahia,Brazil</h2>
-            <img src="images/profile.png" alt="bahia, Brazil">
+            <img src="images/flag.png" alt="bahia, Brazil">
             <p>Bahia, brazil</p>
         </section>
 
