--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <nav>
             <div class="menu-toggle" id="menu-toggle">
-                ☰ <!-- Ícone do menu hambúrguer -->
+                ☰ <!-- hamburguer icon -->
             </div>
             <ul id="nav-list">
                 <li><a href="#">Home</a></li>
