--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
-    <meta name="description" content="Carlos Henrique Serra">
+    <title>WDD231 Homepage - Carlos Serra</title>
+    <meta name="description" content="WDD 231: Web Frontend Development I Course Homepage">
     <meta name="author" content="Carlos Serra">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small-ones.css">
     <link rel="stylesheet" href="styles/larger-ones.css">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Golos+Text:wght@400..900&family=Oswald:wght@200..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Golos+Text:wght@400..900&family=Oswald:wght@200..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap" rel="stylesheet">
     <script src="scripts/char.js" defer></script>
 
 </head>
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div class="profile-container">
-            <img src="images/profile.png" alt="profile picture">
+            <img src="images/profile.webp" alt="profile picture">
             <h1>Carlos Henrique Serra</h1>
         </div>
         <nav>
@@ -36,9 +36,7 @@
         </nav>
     </header>
     <main>
-
         <h1>Home</h1>
-
         <section class="sec1">
             <h2>Course Work</h2>
             <ul>
