--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD231 Homepage - Carlos Serra</title>
+    <title>Home Page WDD231 - Carlos Serra</title>
     <meta name="description" content="WDD 231: Web Frontend Development I Course Homepage">
     <meta name="author" content="Carlos Serra">
     <link rel="stylesheet" href="styles/normalize.css">
@@ -12,7 +12,9 @@
     <link rel="stylesheet" href="styles/larger-ones.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Golos+Text:wght@400..900&family=Oswald:wght@200..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Golos+Text:wght@400..900&family=Oswald:wght@200..700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Righteous&display=swap"
+        rel="stylesheet">
     <script src="scripts/char.js" defer></script>
 
 </head>
@@ -35,8 +37,10 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <h1>Home</h1>
+
         <section class="sec1">
             <h2>Course Work</h2>
             <ul>
@@ -45,13 +49,11 @@
                 <li></li>
             </ul>
         </section>
-
         <section class="sec2">
             <h2>Bahia,Brazil</h2>
             <img src="images/flag.png" alt="bahia, Brazil">
             <p>Bahia, brazil</p>
         </section>
-
         <section class="sec3">
             <h2>Web and Computer Programming Certificate</h2>
 
@@ -62,12 +64,13 @@
             </div>
 
             <hr class="separator">
-
             <p id="total-credits" class="creditsT"><strong>Total Credits:</strong> 0</p>
             <ul id="courseList" class="courses"></ul>
 
         </section>
+
     </main>
+
     <footer>
         <p>&copy; <span id="currentYear"></span> 💥Carlos Serra💥</p>
         <p id="lastModified">Carlos Serra, Brazil</p>
