--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
         <div class="profile-container">
             <img src="images/profile.webp" alt="profile picture">
             <h1>Carlos Henrique Serra</h1>
+            <div class="menu-toggle" id="menu-toggle"><!-- hamburguer icon --></div>
+
         </div>
-        <nav>
-            <div class="menu-toggle" id="menu-toggle">
-                ☰ <!-- hamburguer icon -->
-            </div>
+        <nav id="animateme">
             <ul id="nav-list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Chamber</a></li>
