join, directory, thankyou, home page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         </div>
         <nav id="animateme">
-            <ul id="nav-list">
+            <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Chamber</a></li>
                 <li><a href="#">GitHub Profile</a></li>
@@ -55,24 +55,24 @@
                 <li></li>
             </ul>
         </section>
+
+        <dialog id="course-details"></dialog>
         <section class="sec2">
             <h2>Bahia,Brazil</h2>
             <img src="images/flag.png" alt="bahia, Brazil">
             <p>Bahia, brazil</p>
         </section>
+
         <section class="sec3">
             <h2>Web and Computer Programming Certificate</h2>
-
             <div class="filters">
                 <button id="filter-all">All</button>
                 <button id="filter-cse">CSE</button>
                 <button id="filter-wdd">WDD</button>
             </div>
-
             <hr class="separator">
             <p id="total-credits" class="creditsT"><strong>Total Credits:</strong> 0</p>
             <ul id="courseList" class="courses"></ul>
-
         </section>
 
     </main>
