--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,7 +21,7 @@
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
     <!--Icon-->
-    <link rel="icon" href="">
+    <link rel="icon" href="favicon.ico">
 
 </head>
 
@@ -35,12 +35,12 @@
         </div>
     </header>
     <nav id="animated">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Directory</a></li>
-                <li><a href="">Join</a></li>
-                <li><a href="">Discover</a></li>
-            </ul>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Directory</a></li>
+            <li><a href="">Join</a></li>
+            <li><a href="">Discover</a></li>
+        </ul>
     </nav>
 
     <main>
