--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,7 +23,7 @@
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
     <!--Icon-->
-    <link rel="icon" href="">
+    <link rel="icon" href="favicon.ico">
 
 </head>
 
