--- a/chamber/join.html
+++ b/chamber/join.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Carlos Serra">
     <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/small.css">
-    <!-- No final do body de join.html e thankyou.html -->
+
     <script type="module" src="scripts/index.mjs"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +21,11 @@
     <meta property="og:image" content="" />
     <meta property="og:url" content="" />
     <!--Icon-->
-    <link rel="icon" href="">
+    <link rel="icon" href="favicon.ico">
 
 </head>
 
-<body>
+<body class="join-page">
     <header>
         <div class="logo">
             <img src="images/profile.png" alt="logo" width="70px" height="auto">
