--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -7,9 +7,11 @@
     <title>Timbuktu Chamber of Commerce</title>
     <meta name="description" content="Timbuktu Chamber of Commerce">
     <meta name="author" content="Carlos Serra">
-    <link rel="stylesheet" href="styles/large.css">
     <link rel="stylesheet" href="styles/small.css">
-    <script type="module" src="scripts/index.mjs"></script>
+    <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/large.css">
+    <script src="scripts/index.mjs" type="module" defer></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
@@ -33,6 +35,7 @@
             <button id="hamButton"></button>
         </div>
     </header>
+
     <nav id="animated">
         <ul>
             <li><a href="">Home</a></li>
@@ -41,22 +44,18 @@
             <li><a href="">Discover</a></li>
         </ul>
     </nav>
-
+ 
     <main>
-        <h2>Thank you for your submission!</h2>
-        <p><strong>First Name:</strong> <span id="firstName"></span></p>
-        <p><strong>Last Name:</strong> <span id="lastName"></span></p>
-        <p><strong>Email:</strong> <span id="email"></span></p>
-        <p><strong>Phone:</strong> <span id="phone"></span></p>
-        <p><strong>Submitted On:</strong> <span id="timestamp"></span></p>
-        <p><strong>Organization Name:</strong> <span id="orgName"></span></p>
+
+        <aside id="sidebar" class="side-bar"></aside>
+        <div id="allplaces" class="places-grid"></div>
+
     </main>
 
     <footer>
         <p>&copy; <span id="currentYear"></span> 💥Carlos Serra💥</p>
         <p id="lastModified"> Carlos Serra, Brazil</p>
     </footer>
-
 </body>
 
 </html>
