--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -46,10 +46,10 @@
     <main>
         <div class="menu">
             <button id="grid">
-                <img src="images/gridicon.svg" alt="grid-button" width="30px" height="auto">
+                <img src="images/gridicon.svg" loading="lazy" alt="grid-button" width="30px" height="auto">
             </button>
             <button id="list">
-                <img src="images/listicon.svg" alt="list-button" width="35px" height="auto">
+                <img src="images/listicon.svg" loading="lazy" alt="list-button" width="35px" height="auto">
             </button>
         </div>
         <div id="cards" class="grid"></div>
