--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,19 +30,19 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/profile.png" alt="logo" width="70px" height="auto">
+            <img src="images/profile.png" loading="lazy" alt="logo" width="70px" height="auto">
             <h1>Timbuktu</h1>
             <p>Chamber of Commerce</p>
             <button id="hamButton"></button>
         </div>
     </header>
     <nav id="animated">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Directory</a></li>
-                <li><a href="">Join</a></li>
-                <li><a href="">Discover</a></li>
-            </ul>
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">Directory</a></li>
+            <li><a href="">Join</a></li>
+            <li><a href="">Discover</a></li>
+        </ul>
     </nav>
 
     <main>
