--- a/chamber/join.html
+++ b/chamber/join.html
@@ -28,7 +28,7 @@
 <body class="join-page">
     <header>
         <div class="logo">
-            <img src="images/profile.png" alt="logo" width="70px" height="auto">
+            <img src="images/profile.png" loading="lazy" alt="logo" width="70px" height="auto">
             <h1>Timbuktu</h1>
             <p>Chamber of Commerce</p>
             <button id="hamButton"></button>
