--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -27,7 +27,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/profile.png" alt="logo" width="70px" height="auto">
+            <img src="images/profile.png" loading="lazy" alt="logo" width="70px" height="auto">
             <h1>Timbuktu</h1>
             <p>Chamber of Commerce</p>
             <button id="hamButton"></button>
