--- a/final-project/contact.html
+++ b/final-project/contact.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Carlos Henrique" />
   <link rel="stylesheet" href="styles/main.css" />
   <link rel="stylesheet" href="styles/main.css" />
+
   <link rel="icon" href="design-icon.ico" />
   <!-- META TAG-->
   <meta property="og:title" content="Creative Graphic Design" />
@@ -58,6 +59,7 @@
 
     </form>
   </main>
+
   <footer>
     <div class="footer-left">
       <h4>Creative Graphic Design</h4>
@@ -86,5 +88,6 @@
         Last Modification: <span id="lastModified"></span></p>
     </div>
   </footer>
+  <script type="module" src="scripts/main.mjs"></script>
 
 </body>
